--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2 # Uncomment this if you're using ppnpm
+        with:
+          version: 10.12.1
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
