--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,16 +30,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v2 # Uncomment this if you're using ppnpm
-        with:
-          version: 10.12.1
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: pnpm
       - name: Install dependencies
-        run: pnpm ci
+        run: pnpm install
       - name: Build
         run: pnpm run build
       - name: Setup Pages
